css/main.css
/* ... */
html {
    overflow: hidden !important;
    overflow-y: auto !important;
    scroll-behavior: smooth;
}

.row {
    min-height: 40px;
}


#schedule-section {
    height: 800px;
}

@media (max-width: 1100px) {
    .main-title {
        font-size: 12vw !important;
    }
    .title-right {
        margin-right: 20px !important;
    }
    .main-logo {
        width: 50px !important;
        margin-bottom: -50px !important;
        margin-right: 20px !important;
        margin-left: 20px !important;
    }

    #about-section {
        padding: 5vh 10vw 5vh 10vw !important;
    }
    .quote {
        padding: 0px 10px !important;
    }
}

@media (max-width: 500px) {
    .main-logo {
        width: 30px !important;
        margin-bottom: -100px !important;
        margin-right: 20px !important;
        margin-left: 20px !important;
    }
}

#about-section {
    padding: 5vh 20vw 5vh 20vw;
}

@media (max-width: 992px) {
    .col-md-6 {
        min-width: 80vw;
    }
    .text3 {
        font-size: 0.8rem !important;
    }
    .prof {
        width: 90vw !important;
    }
    .prof {
        padding: 5px 0;
    }
    body {
        font-size: 1rem !important;
    }
    h3 {
        font-size: 1.2rem !important;
    }
    .gb {
        padding: 4px 16px;
        cursor: pointer;
        font-size: 1rem;
        border-radius: 4px;
        margin: 0px 10px;
    }
    .figure-caption-title {
        font-size: 1.6rem !important;
    }
    .figure-caption {
        font-size: 1.4rem !important;
    }
    .figure-caption-e {
        font-size: 1.0rem !important;
    }
    .figure-caption-title-e {
        font-size: 1.2rem !important;
    }
    figure {
        width: 25vw;
    }
    .figure-e {
        width: 18vw;
    }
    .figure-image {
        width: 20vw;
        height: 20vw;
    }
    .figure-image-e {
        width: 17vw;
        height: 17vw;
    }
    .directors {
        padding: 0vw 12.5vw;
    }
    .everyone-else {
        padding: 0vw 5vw;
    }
    .navbar-brand,
    .navbar-toggler {
        font-size: 1.5rem !important;
    }
    .nav-link {
        font-size: 1rem !important;
    }
    .layer2 {
        padding: 4vh 0vh 30px 0vh !important;
    }
}

#ssssc {
    min-height: 760px;
}

.sponsor {
    width: 250px;
    margin: 5% 2%;
}


.layer2 {
    padding: 4vh 0vh 40px 0vh;
}

@media (max-width: 1000px) {
    .sponsor {
        width: 175px;
    }
}

.gb {
    box-shadow: 2px 5px 10px #101030;
}

.gb:hover {
    transform: translateY(-5px) !important;
    box-shadow: 5px 10px 10px #101030;
}

#title-navbar-left {
    margin-left: 70px;
    font-size: 30px;position:absolute;
    transform:translateY(-20px);
}

.faq-page {
    text-align: center; 
    clear: both;
    background: url(../img/city.jpg) no-repeat center center fixed; 
    background-size: cover;
}

#copyright-wrapper {
    padding: 2vh 20vw 2vh 20vw;
}

#title-navbar-right {
    color: #ce7b91;font-size: 30px;
    transform:translateY(-20px) translateX(170px);
    position:absolute;
}



.masthead {
    min-height: 100vh;
    background: url(../img/city2.jpg) no-repeat center center fixed; 
    background-size: cover;
}

.navbar-brand:hover {
    color: #B8D3D1;
}

.fa-bars {
    transform: translateY(2px);
}

.layer {
    background-color: #101020bb;
    top: 0;
    left: 0;
    min-width: 100vw;
    min-height: 100vh;
}

.layer2 {
    background-color: #101020d0;
}

@media (max-width: 700px) {
    #title-navbar-left {
        margin-left: 10px !important;
        font-size: 20px !important;
    }
    #title-navbar-right {
        transform: translateY(-20px) translateX(77px) !important;
        font-size: 20px !important;
    }
    #mainlogo {
        height: 30px !important;
        margin-bottom: 0px !important;
    }
    .prof {
        padding: 5px 0;
    }
    .sponsor {
        width: 100px;
    }
    .gb {
        padding: 2px 12px;
        cursor: pointer;
        font-size: 1rem;
        border-radius: 4px;
        margin: 0px 5px;
    }
    .figure-caption-title {
        font-size: 3vw !important;
    }
    .figure-caption {
        font-size: 2.5vw !important;
    }
    .figure-caption-e {
        font-size: 2.2vw !important;
    }
    .figure-caption-title-e {
        font-size: 2.5vw !important;
    }
    .cell100,
    th {
        font-size: 0.8rem !important;
        padding-top: 8px !important;
        padding-bottom: 8px !important;
    }
    .table100 {
        padding-top: 30px !important;
    }
    #ssssc {
        min-height: 460px !important;
    }


}

a.hyperlink {
    display: block;
    position: relative;
    top: -5vh;
    visibility: hidden;
}

a:hover {
    color: #768891;
    text-decoration: none;
    cursor: pointer;
}

.text1 {
    color: #c0e8f9;
    margin-top: 100px;
}

.text2 {
    color: #c0e8f9;
    margin-top: 20px;
}

.text3 {
    color: #c0e8f9;
    margin-top: 30px;
    font-size: 1.2rem;
}

.menu-bar {
    float: right;
    width: 70%;
    height: 100px;
}

#copyright {
    font-size: 1rem;
    color: #b8d3d1;
    text-align: center;
    margin-bottom: 0;
}

.menu-link {
    padding: 26px 20px 5px 10px;
    color: #b8d3d1;
    float: right;
}

.menu-name {
    padding: 26px 0px 5px 30px;
    width: 30%;
    color: #b8d3d1;
    float: left;
}

.menu-bar-hidden {
    display: none;
}

#menu-down {
    display: none;
}

.header {
    background: rgba(0, 0, 0, 0);
    width: 100%;
    height: 80px;
    position: absolute;
    z-index: 10;
}

h1 {
    color: #b8d3d1;
}

.title-page {
    padding-bottom: 100px;
}

.main-logo {
    margin: -16.5vh 50px 0vh 50px;
}

@media screen and (-webkit-min-device-pixel-ratio:0) {
    .main-logo {
        filter: blur(0px);
        object-fit: contain;
        width: 60px;
    }
}

.title-container {
    padding-top: 2vh;
    z-index: 30;
}

.title-right {
    color: #ce7b91 !important;
    margin-right: 50px;
}

.title-left {
    color: #B8D3D1 !important;
}

.main-title {
    font-size: 9rem;
    font-family: 'CircularStd';
}
/* ... */

